--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,42 @@
-
+.page{
+    display: flex;
+    flex-direction: row;
+}
 .sketch-container{
     width: 45%;
     height: 25rem;
     border: 0.2rem solid black;
     margin: 100px auto;
+    margin-left: 60px;
+    box-shadow:0 0  5px 10px rgba(0, 0, 0, 0.2);
+
     
+}
+
+.menu{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    margin-left: 10rem;
+    gap: 12px;
+}
+
+button{
+    display:inline-block;
+    padding:1.5em 1.5em;
+    border:0.1em solid #ca7059;
+    margin:0 0.3em 0.3em 0;
+    border-radius:0.12em;
+    box-sizing: border-box;
+    text-decoration:none;
+    font-family:'Roboto',sans-serif;
+    font-weight:300;
+    color:#c21c1c;
+    text-align:center;
+    font-size: 15px;
+}
+
+button:hover{
+    color:#000000;
+    background-color:#FFFFFF;
 }
