--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,24 @@
+body{
+    background-color: rgb(158, 181, 223);
+}
+
+h1{
+    text-align: center;
+    font-size: 50px;
+    margin: 0;
+    margin-bottom: 10px;
+    color:black;
+}
+
+.sketch-container{
+    
+   display: grid;
+    width: 500px;
+    height: 500px;
+    background-color: var(--secondary-light);
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    background-color: white;
+}
 .page{
     display: flex;
     flex-direction: row;
@@ -6,7 +27,7 @@
     width: 45%;
     height: 25rem;
     border: 0.2rem solid black;
-    margin: 100px auto;
+    margin:50px auto;
     margin-left: 60px;
     box-shadow:0 0  5px 10px rgba(0, 0, 0, 0.2);
 
@@ -23,7 +44,7 @@
 
 button{
     display:inline-block;
-    padding:1.5em 1.5em;
+    padding:1em 0.7em;
     border:0.1em solid #ca7059;
     margin:0 0.3em 0.3em 0;
     border-radius:0.12em;
